--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "prisma": "^6.14.0",
+    "task-master-ai": "^0.25.1",
     "zod": "^4.1.3"
   },
   "devDependencies": {
