--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,18 @@
-# API Keys (Required to enable respective provider)
-ANTHROPIC_API_KEY="your_anthropic_api_key_here"       # Required: Format: sk-ant-api03-...
-PERPLEXITY_API_KEY="your_perplexity_api_key_here"     # Optional: Format: pplx-...
-OPENAI_API_KEY="your_openai_api_key_here"             # Optional, for OpenAI models. Format: sk-proj-...
-GOOGLE_API_KEY="your_google_api_key_here"             # Optional, for Google Gemini models.
-MISTRAL_API_KEY="your_mistral_key_here"               # Optional, for Mistral AI models.
-XAI_API_KEY="YOUR_XAI_KEY_HERE"                       # Optional, for xAI AI models.
-GROQ_API_KEY="YOUR_GROQ_KEY_HERE"                     # Optional, for Groq models.
-OPENROUTER_API_KEY="YOUR_OPENROUTER_KEY_HERE"         # Optional, for OpenRouter models.
-AZURE_OPENAI_API_KEY="your_azure_key_here"            # Optional, for Azure OpenAI models (requires endpoint in .taskmaster/config.json).
-OLLAMA_API_KEY="your_ollama_api_key_here"             # Optional: For remote Ollama servers that require authentication.
-GITHUB_API_KEY="your_github_api_key_here"             # Optional: For GitHub import/export features. Format: ghp_... or github_pat_...
+# Database (Neon Postgres)
+# Example: postgresql://<user>:<password>@<host>/<database>?sslmode=require
+DATABASE_URL=postgresql://user:password@your-neon-host.neon.tech/neondb?sslmode=require
+
+# JWT secret used to sign access tokens
+JWT_SECRET=change-me-please
+
+# Admin bootstrap (seed)
+# The seed expects an already-hashed bcrypt password
+# To generate: node -e "console.log(require('bcrypt').hashSync('admin123', 10))"
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD_HASH=$2b$10$replace_with_bcrypt_hash
+
+# Toggle public registration endpoint (default disabled)
+ALLOW_REGISTER=false
+
+# Server port (optional; Koyeb provides PORT)
+PORT=3000
