--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
   "name": "api-watchlist",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "generate": "bunx prisma generate",
+    "migrate:dev": "bunx prisma migrate dev",
+    "migrate:deploy": "bunx prisma migrate deploy",
+    "seed": "bun run prisma/seed.ts",
+    "start": "bun run src/index.ts"
+  },
+  "prisma": {
+    "seed": "bun run prisma/seed.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.19.0",
     "@hono/zod-validator": "^0.7.2",
     "@prisma/client": "^6.14.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "hono": "^4.9.4",
     "jsonwebtoken": "^9.0.2",
+    "@hono/swagger-ui": "^0.4.5",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "prisma": "^6.14.0",
     "task-master-ai": "^0.25.1",
+    "ulid": "^2.3.0",
     "zod": "^4.1.3"
   },
   "devDependencies": {
