feat: integrate external APIs for content discovery and enhance environment configuration

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,13 @@
-# Database (Neon Postgres)
-# Example: postgresql://<user>:<password>@<host>/<database>?sslmode=require
-DATABASE_URL=postgresql://user:password@your-neon-host.neon.tech/neondb?sslmode=require
+DATABASE_URL=""
+SEED_USER_EMAIL=
+SEED_USER_PASSWORD=
+SEED_USER_NAME=
 
-# JWT secret used to sign access tokens
-JWT_SECRET=change-me-please
+JWT_SECRET=
+ADMIN_EMAIL=
+ADMIN_PASSWORD_HASH=
+ALLOW_REGISTER=
+PORT=
 
-# Admin bootstrap (seed)
-# The seed expects an already-hashed bcrypt password
-# To generate: node -e "console.log(require('bcrypt').hashSync('admin123', 10))"
-ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD_HASH=$2b$10$replace_with_bcrypt_hash
-
-# Toggle public registration endpoint (default disabled)
-ALLOW_REGISTER=false
-
-# Server port (optional; Koyeb provides PORT)
-PORT=3000
+# External APIs
+TMDB_API_KEY="your-tmdb-api-key-here"  # REQUIRED for movies/series
