--- a/env.example
+++ b/env.example
@@ -18,3 +18,8 @@ ALLOW_REGISTER=true
 # Rate Limiting (optional)
 RATE_LIMIT_WINDOW=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Seed Data (optional - for initial user creation)
+SEED_USER_EMAIL="admin@example.com"
+SEED_USER_PASSWORD="admin123"
+SEED_USER_NAME="Admin User"
