--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "api-watchlist",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
+    "build": "bunx tsc",
     "generate": "bunx prisma generate",
     "migrate:dev": "bunx prisma migrate dev",
     "migrate:deploy": "bunx prisma migrate deploy",
     "seed": "bun run prisma/seed.ts",
-    "start": "bun run src/index.ts"
+    "start": "node dist/index.js"
   },
   "prisma": {
     "seed": "bun run prisma/seed.ts"
@@ -15,10 +16,7 @@
     "@hono/node-server": "^1.19.0",
     "@hono/zod-validator": "^0.7.2",
     "@prisma/client": "^6.14.0",
-    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "hono": "^4.9.4",
     "jsonwebtoken": "^9.0.2",
@@ -26,14 +24,10 @@
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "prisma": "^6.14.0",
-    "task-master-ai": "^0.25.1",
     "ulid": "^2.3.0",
     "zod": "^4.1.3"
   },
   "devDependencies": {
-    "@types/bun": "latest",
-    "@types/node": "^24.3.0",
-    "tsx": "^4.20.5",
-    "typescript": "^5.9.2"
+    "@types/bun": "latest"
   }
 }
