--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^17.2.1",
     "hono": "^4.9.4",
     "jsonwebtoken": "^9.0.2",
-    "@hono/swagger-ui": "^0.4.5",
+    "@hono/swagger-ui": "0.4.4",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "prisma": "^6.14.0",
