--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "api-watchlist",
   "scripts": {
-    "dev": "bun run --hot src/index.ts",
-    "build": "bunx tsc",
-    "generate": "bunx prisma generate",
-    "migrate:dev": "bunx prisma migrate dev",
-    "migrate:deploy": "bunx prisma migrate deploy",
-    "seed": "bun run prisma/seed.ts",
-    "start": "node dist/index.js"
+    "dev": "netlify dev",
+    "build": "tsc && npm run generate && npm run postbuild",
+    "postbuild": "cp -r src/generated netlify/functions/",
+    "generate": "prisma generate",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
+    "seed": "node prisma/seed.js",
+    "start": "netlify dev"
   },
   "prisma": {
     "seed": "bun run prisma/seed.ts"
@@ -17,10 +18,10 @@
     "@hono/zod-validator": "^0.7.2",
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.1",
+    "dotenv": "^16.4.5",
     "hono": "^4.9.4",
     "jsonwebtoken": "^9.0.2",
-    "@hono/swagger-ui": "0.4.4",
+    "@hono/swagger-ui": "^0.3.0",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "prisma": "^6.14.0",
@@ -28,6 +29,9 @@
     "zod": "^4.1.3"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@netlify/functions": "^4.2.5",
+    "@types/node": "^20.10.5",
+    "netlify-cli": "^17.10.1",
+    "typescript": "^5.6.3"
   }
 }
