fix: another adjustment build netlify script

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
   command = "npm run build"
+  publish = "public"
   functions = "netlify/functions"
 
 [dev]
@@ -18,3 +19,5 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--legacy-peer-deps"
+  NETLIFY_USE_YARN = "false"
