--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "api-watchlist",
   "scripts": {
-  "dev": "netlify dev",
-  "build": "tsc && prisma generate",
-  "generate": "prisma generate",
-  "migrate:dev": "prisma migrate dev",
-  "migrate:deploy": "prisma migrate deploy",
-  "seed": "node prisma/seed.js",
-  "start": "netlify dev"
-},
+    "dev": "netlify dev",
+    "prebuild": "node scripts/verify-build.js",
+    "build": "npm run prebuild && tsc && npm run generate && npm run postbuild",
+    "postbuild": "node -e \"const fs=require('fs-extra'); fs.ensureDirSync('netlify/functions/generated'); fs.copySync('src/generated', 'netlify/functions/generated')\"",
+    "generate": "prisma generate",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:deploy": "prisma migrate deploy",
+    "seed": "node prisma/seed.js",
+    "start": "netlify dev"
+  },
   "prisma": {
     "seed": "bun run prisma/seed.ts"
   },
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@netlify/functions": "^4.2.5",
     "@types/node": "^20.10.5",
+    "fs-extra": "^11.2.0",
     "netlify-cli": "^17.10.1",
     "typescript": "^5.6.3"
   }
